@@ -102,16 +102,8 @@ BEGIN_FACTORY("VSTGUI", "", "", PFactoryInfo::kUnicode)
 END_FACTORY
 
 //------------------------------------------------------------------------
-//------------------------------------------------------------------------
-//------------------------------------------------------------------------
-void* hInstance = 0;
-
-//------------------------------------------------------------------------
 bool InitModule ()   
 {
-	extern void* moduleHandle;
-	hInstance = moduleHandle;
-
 	return true; 
 }
 
