@@ -1,3 +1,8 @@
+2011-03-06 arne
+
+	* fix CFrame::getViewAt(..) returning wrong view in modal mode
+	* use a template class for the view iterator
+
 2011-03-04 arne
 
 	* add CDrawContext::createRoundRectGraphicsPath(..) method (thanks to Big Tick for contribution)
